--- a/starter/styles/reset.css
+++ b/starter/styles/reset.css
@@ -3,7 +3,8 @@
   --lightblue: #3498db;
   --light: #ecf0f1;
   --darkblue: #2c3e50;
-  --red: #e74c3c;
+  --grey: rgb(182, 173, 173);
+
 }
 
 body {
@@ -12,55 +13,67 @@ body {
   background-color: var(--light);
   color: var(--darkblue);
 }
-
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+h5{
+
   font-weight: 700;
 }
 
-thead {
-  background-color: var(--red);
-  color: var(--light);
-  font-weight: 700;
-}
 
-.custom-jumbotron,
+
+/* .custom-jumbotron,
 .custom-card .card-header,
 .custom-card .card-footer,
 .custom-modal .modal-header,
-.custom-modal .modal-footer,
+.custom-modal .modal-footer, */
 .forecast-item {
   background-color: var(--darkblue);
   color: var(--light);
 }
-.forecast-item {
+.forecast {
+  flex-wrap: wrap;
+  display: inline;
+}
+.forecast-item,.today-header {
   padding: 10px;
+  border: 3px solid var(--grey);
 }
-.custom-card {
-  border-color: var(--darkblue);
+.forecast-header {
+  padding-top: 10px;
 }
-
+.forecast-item {
+display: inline-block !important;
+width: 15%;
+/* margin-right: 10px; */
+padding: 10px;
+}
+#search-input{
+  /* display: block; */
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+}
 .custom-card .card-body,
 .custom-modal .modal-body {
   background-color: var(--light);
   color: var(--darkblue);
 }
 
-.custom-btn {
-  background-color: var(--light);
+.custom-btn, .search-button {
+  background-color: var(--grey);
   color: var(--darkblue);
+  width: 100%;
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: 5px;
 }
-
+.search-button {
+  background-color: var(--blue);
+}
 .custom-btn:hover {
   background-color: var(--lightblue);
   color: var(--darkblue);
 }
 
-.custom-table tbody {
-  background-color: var(--darkblue);
-  color: var(--light);
-}
+
