--- a/starter/styles/reset.css
+++ b/starter/styles/reset.css
@@ -44,9 +44,9 @@ h5{
 }
 .forecast-item {
 display: inline-block !important;
-width: 15%;
-/* margin-right: 10px; */
-padding: 10px;
+width: 17%;
+margin-right: 28px;
+/* padding-right: 10p; */
 }
 #search-input{
   /* display: block; */
